--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,8 +1,5 @@
-
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-
-<script language="javascript">
-<!--
+<script type="text/javascript">
 $(document).ready(function()
 {
     $(".defaultText").focus(function(srcc)
@@ -25,32 +22,48 @@ $(document).ready(function()
     
     $(".defaultText").blur();        
 });
-//-->
+
 </script>
+
+
 
 <div id="page-wrap">
 
+ <% if logged_in? %>
+        Welcome <%= current_user.username %>! Not you?
+        <%= link_to "Log out", logout_path %>
+      <% else %>
+        <%= link_to "Sign up", signup_path %> or
+        <%= link_to "log in", login_path %>.
+      <% end %>
+	  
 <h1>I'd Like To See</h1>
 
             <div id="control">
 
 			<%= render 'form' %>
-			
-			
+			<div id="aviso">
+			You can specify the movie's year if needed, i.e.: Scarface (1983)
+			</div>
+
+
 <% @movies.each do |movie| %>
 
 <ul id="list">
    <li class="colorRed">
-        <span><%= movie.title %><div id="cuevana"><a href="<%= movie.cuevana %>">Cuevana</a></div></span>
+         <span><div id="title"><%= movie.title %></div><div id="year"><%= movie.year %></div>
+		 <div id="cuevana"><a href="<%= movie.cuevana %>">Cuevana (Stream)</a></div></span>
         <div class="deletetab tab"><%= button_to 'Seen', movie, :class => 'buttonSeen', :method => :delete %></div>
     </li>
 </ul>
 
-
-
 <br />
 
 <% end %>
+
+<div id="pagination">
+<%= will_paginate @movies, :page_links => false %>
+</div>
 
 </div>
 </div>
