--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title><%= content_for?(:title) ? yield(:title) : "I'd Like To See" %></title>
     <%= stylesheet_link_tag "application", "styles" %>
-    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag :all %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
