--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -36,7 +36,7 @@ $(document).ready(function()
         <%= link_to "log in", login_path %>.
       <% end %>
 	  
-<h1>I'd Like To See</h1>
+<h1>I Wanna See</h1>
 
             <div id="control">
 
