--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.text_field :title, :class => 'defaultText', :title => 'Fight Club' %>
+    <%= f.text_field :title, :class => 'defaultText', :title => 'Fight Club', :placeholder => 'Fight Club' %>
   </div>
   <div class="actions">
     <%= f.submit 'Add', :class => 'button' %>
