--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 	<!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for?(:title) ? yield(:title) : "I'd Like To See" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "I Wanna See" %></title>
     <%= stylesheet_link_tag "application", "styles" %>
-    <%= javascript_include_tag :defaults %>
+<%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js", "rails.js" %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
@@ -14,6 +14,6 @@
       <% end %>
       <%= content_tag :h1, yield(:title) if show_title? %>
       <%= yield %>
-    </div>
+    </div>	
   </body>
 </html>
