--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,17 @@
 <div id="page-wrap">
+
+ <% if logged_in? %>
+        <div id="welcome">Welcome <%= current_user.username %>! Not you?
+        <%= link_to "Log out", logout_path %>
+		<div id="publiclink">
+        [<%= link_to "Your Movies", movies_path %>]
+        </div>
+		</div>
+      <% else %>
+        <%= link_to "Sign up", signup_path %> or
+        <%= link_to "log in", login_path %>.
+      <% end %>
+
 	  
 <h1><%= @user.username %>'s List</h1>
 
